--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,12 +3,23 @@
 <head>
     {% block head %}
     <link rel="stylesheet" href="/static/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/static/css/home.css" />
     <title>{% block title %}{% endblock %}</title>
     {% endblock %}
 </head>
 <body>
+    <div class="jumbotron">
+      <h1>Splitwise Data Backup</h1>
+      <p>Back up your splitwise data to Google Drive</p>
+      {% block jumbotroncontent %}{% endblock %}
+      <a href="https://github.com/namaggarwal/splitwise-backup-flask-app"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"></a>
+    </div>
     <div class="container">
       {% block content %}{% endblock %}
+    </div>
+    <div class="footer">
+      <p>&copy; <a href="http://github.com/namaggarwal">Naman Aggarwal</a></p>
+      <p>All logos and names belong to their respective owners.</p>
     </div>
     <script type="text" src="/static/js/bootstrap.min.js"></script>
 </body>
