--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,11 +1,10 @@
 {% extends "base.html" %}
 {% block title %}Home{% endblock %}
 {% block content %}
-  <div class="jumbotron">
-    <h2>Login</h2>
-  </div>
   <div class="buttonCont" style="text-align:center;margin-top:10%">
-    <a href="{{ url_for('pages.googleLogin') }}" class="btn btn-primary" type="button">Login Using Google</a>
+    <a href="{{ url_for('pages.googleLogin') }}" class="loginBtn loginBtn--google" type="button">
+      Login with Google
+    </a>
   </div>
 
 {% endblock %}
