--- a/app/static/css/home.css
+++ b/app/static/css/home.css
@@ -53,32 +53,32 @@ a.loginBtn:focus, a.loginBtn:hover{
 /* Google */
 .loginBtn--google {
   /*font-family: "Roboto", Roboto, arial, sans-serif;*/
-  background: #48c9b0;
+  background: #e0e0e0;
+  color: blue;
 }
 .loginBtn--google:before {
-  border-right: #BB3F30 1px solid;
   background: url("/static/img/google.png");
   background-size:contain;
 }
 .loginBtn--google:hover,
 .loginBtn--google:focus {
-  background: #E74B37;
+  background: #bdbdbd;
   color: #FFF
 }
 
 /* Splitwise */
 .loginBtn--splitwise {
   /*font-family: "Roboto", Roboto, arial, sans-serif;*/
-  background: #34495e;
+  background: #e0e0e0;
+  color: blue;
 }
 .loginBtn--splitwise:before {
-  border-right: black 1px solid;
   background: url("/static/img/splitwise.png");
   background-size:contain;
 }
 .loginBtn--splitwise:hover,
 .loginBtn--splitwise:focus {
-  background: black;
+  background: #bdbdbd;
   color: #FFF
 }
 
