--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     {% block head %}
-    <link rel="stylesheet" href="/static/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/static/css/home.css" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}" />
     <title>{% block title %}{% endblock %}</title>
     {% endblock %}
 </head>
@@ -21,6 +21,6 @@
       <p>&copy; <a href="http://github.com/namaggarwal">Naman Aggarwal</a></p>
       <p>All logos and names belong to their respective owners.</p>
     </div>
-    <script type="text" src="/static/js/bootstrap.min.js"></script>
+    <script type="text" src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
 </body>
 </html>
