--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,6 +8,17 @@
     {% endblock %}
 </head>
 <body>
+    {% if config['GOOGLE_ANALYTIC_ENABLED'] %}
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', '{{ config['GOOGLE_ANALYTIC_ID'] }}', 'auto');
+      ga('send', 'pageview');
+    </script>
+    {% endif %}
     <div class="jumbotron">
       <h1>Splitwise Data Backup</h1>
       <p>Back up your splitwise data to Google Drive</p>
