Fixed home html for splitwise

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -35,7 +35,7 @@
           </a>
         </div>
       {% endif %}
-      {% if not current_user.googleSheetAccess %}
+      {% if not current_user.splitwiseAccess %}
         <div class="col-md-4 col-centered splitwiseCont">
           <img src="{{ url_for('static', filename='img/splitwise.png') }}">
         </div>
