Fixed head case

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Splitwise BackUp{% endblock %}
+{% block title %}Splitwise Backup{% endblock %}
 {% block content %}
 <div class="container-fluid">
   {% if current_user.googleSheetAccess and current_user.splitwiseAccess %}
